--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title:            SpaceMan
+longtitle:        SpaceMan 
+author:           WarMachine 
+email:            example@gmail.com
 description: >
-  Build Jekyll site with the GitBook style.
+  By WarMachine 
 
 version:          1.0
 gitbook_version:  3.2.3
 
 url:              'https://sighingnow.github.io'
-baseurl:          '/jekyll-gitbook'
+baseurl:          '/'
 rss:              RSS
 
 # bootstrap: use the remote theme for the site itself
@@ -62,5 +62,3 @@ regenerate:       true
 
 plugins:
   - jekyll-feed
-  - jekyll-readme-index
-  - jemoji
